add status product
